<resources>
    <string name="app_name">Listetest</string>

    <string name="intro">Create account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="button">REGISTER</string>
    <string name="selection">Selectionner</string>
    <string name="noselection">Aucune Selection</string>

    <string-array name="numbers">
        <item>One</item>
        <item>Two</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>